--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+
+@font-face {
+  font-family: 'CSHalsey-Regular'; /* Nombre que le das a la fuente */
+  src: url('fonts/CSHalsey-Regular.woff') format('woff'), /* Formato moderno */
+       url('fonts/CSHalsey-Regular.woff') format('woff'); /* Formato compatible */
+  font-weight: normal; /* Peso de la fuente (normal, bold, etc.) */
+  font-style: normal; /* Estilo de la fuente (normal, italic, etc.) */
+}
+
 :root {
   --bg-color: #eeecec;
   --text-color: #333;
@@ -16,22 +25,27 @@
   --button-hover-bg-color: #dfdfdf;
 }
 
+/* Estilos generales */
 body {
-  font-family: Arial, sans-serif;
-  background-color: var(--button-bg-color);
-  color: var(--button-text-color);
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--bg-color);
+  color: var(--text-color);
   margin: 0;
   padding: 0;
   transition: background-color 0.3s, color 0.3s;
 }
 
+/* Estilos para el header */
 header {
+  font-family: 'CSHalsey-Regular', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  background: var(--header-color);
+  color: rgba(255, 255, 255, 0.945);
   padding: 1rem 0;
   position: relative;
+  height: 60px; /* Ajusta la altura según sea necesario */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s;
 }
@@ -46,6 +60,7 @@ header {
 }
 
 .button {
+  font-family: 'CSHalsey-Regular';
   text-decoration: none;
   padding: 10px 20px;
   background: var(--button-bg-color);
@@ -62,15 +77,57 @@ header {
   background-color: var();
 }
 
-h2 {
+@keyframes gradientText {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes movingBackground {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+
+h1 {
+  font-family: 'CSHalsey-Regular', sans-serif;
   margin: 0;
   padding: 10px;
+  text-align: center;
+  font-size: 3rem;
+  background: linear-gradient(45deg, #c0d3e7, #c0d3e7, #28277c, #28277c);
+  background-size: 300% 300%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: gradientText 5s ease infinite;
+  position: relative;
+  display: inline-block;
+}
+h2 {
+  font-family: 'CSHalsey-Regular';
+  margin: 0;
+  padding: 10px;
+  text-align: center;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
 }
 
 .back-button {
+  font-family: 'CSHalsey-Regular';
   position: absolute;
-  top: 10px;
+  top: 30px; /* Ajusta este valor para mover el botón más abajo */
   left: 10px;
   padding: 10px 20px;
   background: var(--button-bg-color);
@@ -100,16 +157,20 @@ h2 {
 }
 /* Estilos generales para los párrafos */
 .chapter-content p {
-  background-color: var(--paragraph-bg-color);
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px 0;
-  transition: transform 0.3s, box-shadow 0.3s;
-  border: 1px solid var(--paragraph-border-color);
-  line-height: 1.6; /* Mejora la legibilidad */
-  font-size: 1.1rem; /* Tamaño de fuente ligeramente más grande */
-  text-align: justify; /* Texto justificado */
+  font-family: 'Open Sans', sans-serif; /* Fuente personalizada */
+  background-color: var(--paragraph-bg-color); /* Color de fondo */
+  padding: 10px 15px; /* Espacio interno: 10px arriba/abajo, 15px izquierda/derecha */
+  border-radius: 10px; /* Bordes redondeados */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  margin: 8px 0; /* Espacio entre párrafos: 8px arriba/abajo, 0 a los lados */
+  transition: transform 0.3s, box-shadow 0.3s; /* Transición suave */
+  border: 5px solid var(--paragraph-border-color); /* Borde del párrafo */
+  line-height: 1.4; /* Altura de línea equilibrada */
+  font-size: 0.95rem; /* Tamaño de fuente ligeramente más grande */
+  text-align: center; /* Alinear texto a la izquierda */
+  text-indent: 0; /* Sin sangría en la primera línea */
+  word-spacing: normal; /* Espaciado entre palabras normal */
+  letter-spacing: normal; /* Espaciado entre letras normal */
 }
 
 /* Efecto hover para los párrafos en modo claro */
@@ -129,21 +190,6 @@ h2 {
   --paragraph-border-color: #e0e0e0;
 }
 
-.chapter-content p {
-  background-color: var(--paragraph-bg-color);
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px 0;
-  transition: transform 0.3s, box-shadow 0.3s;
-  border: 1px solid var(--paragraph-border-color);
-}
-
-/* Efecto hover para los párrafos en modo claro */
-.chapter-content p:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
 
 /* Efecto hover para los párrafos en modo oscuro */
 [data-theme="dark"] .chapter-content p:hover {
@@ -162,6 +208,7 @@ h2 {
 }
 
 .gif-button {
+  font-family: 'CSHalsey-Regular';
   display: block;
   margin: 20px auto;
   padding: 10px 20px;
@@ -179,6 +226,7 @@ h2 {
 }
 
 .gif-section {
+  font-family: 'CSHalsey-Regular';
   display: none; /* Oculto por defecto */
   margin-top: 20px;
   padding: 20px;
@@ -214,9 +262,9 @@ body.home .background {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('gifs/fondo.jpg') no-repeat center center/cover;
+  background: url('documentos/fondo.jpg') no-repeat center center/cover;
   z-index: -1;
-  animation: zoomIn 10s ease-in-out infinite alternate;
+  animation: zoomIn 3s ease-in-out infinite alternate;
 }
 
 /* Asegura que el contenido sea desplazable */
@@ -287,40 +335,25 @@ header {
   --button-text-color: #000000;
   --button-hover-bg-color: rgba(154, 103, 234, 0.9);
 }
-
-/* Estilos generales */
-body {
-  font-family: Arial, sans-serif;
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  margin: 0;
-  padding: 0;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-/* Estilos para el header */
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: var(--header-color);
-  color: rgba(255, 255, 255, 0.945);
-  padding: 1rem 0;
-  position: relative;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s;
-}
-
-
 /* Estilos para el botón de cambio de tema */
 #themeToggle {
   background: transparent;
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
-  transition: transform 0.2s;
+  transition: transform 0.2s ease; /* Transición suave */
+  position: absolute; /* Posicionamiento absoluto */
+  top: 50%; /* Centra verticalmente */
+  right: 10px; /* Alinea a la derecha con un pequeño margen */
+  transform: translateY(-50%); /* Ajusta la posición vertical */
+  transform-origin: center; /* Define el punto de origen de la transformación */
 }
 
 #themeToggle:hover {
-  transform: scale(1.1);
+  transform: translateY(-50%) scale(1.1); /* Escala el botón sin moverlo */
+}
+@media (max-width: 768px) {
+  #themeToggle {
+    font-size: 1.2rem; /* Tamaño de fuente más pequeño en móviles */
+  }
 }
